--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": " set NODE_ENV=development&&nodemon ./index.js -L"
+    "dev": " set NODE_ENV=production&&nodemon ./index.js -L"
   },
   "author": "Michelangelo De Francesco",
   "license": "ISC",
