--- a/templates/default.conf.template
+++ b/templates/default.conf.template
@@ -4,7 +4,15 @@ server {
     access_log  off;
     error_log   off;
     server_name http://192.168.99.100:8080/;
-
+    location /bam {
+			proxy_pass http://192.168.99.100:4000/;
+			proxy_http_version 1.1;
+			proxy_set_header    Host             $host;
+			proxy_set_header    X-Real-IP        $remote_addr;
+			proxy_set_header    X-Forwarded-For  $proxy_add_x_forwarded_for;
+			proxy_read_timeout 1800;
+			proxy_connect_timeout 1800;
+      }
       location / {
 			proxy_pass http://192.168.99.100:3000/;
 			proxy_http_version 1.1;
@@ -14,7 +22,8 @@ server {
 			proxy_read_timeout 1800;
 			proxy_connect_timeout 1800;
       }
-		
+	
+
 	  # gzip
         gzip on;
         gzip_vary on;
