--- a/default.conf.template
+++ b/default.conf.template
@@ -1,12 +1,12 @@
 server {
-    listen      81;
-	listen [::]:81;
+    listen      80;
+	listen [::]:80;
     access_log  off;
     error_log   off;
-    # server_name http://192.168.99.100:8081/;
+     server_name http://192.168.99.100:80/;
 
       location / {
-			proxy_pass http://192.168.99.100:4000/;
+			proxy_pass http://192.168.99.100:3000/;
 			proxy_http_version 1.1;
 			proxy_set_header    Host             $host;
 			proxy_set_header    X-Real-IP        $remote_addr;
