--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -19,3 +19,4 @@ services:
       - 5432:5432
     volumes: 
       - ./pgdata:/var/lib/postgresql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
