--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "color-json": "^2.0.1",
+    "compression": "^1.7.4",
+    "connect-pg-simple": "^6.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
