added external volume to docker compose postgres to persist data

--- a/docker/db/docker-compose.db.yml
+++ b/docker/db/docker-compose.db.yml
@@ -9,7 +9,7 @@ services:
   dev-database: 
     container_name: dev-postgres-database
     image: postgres
-    restart: always
+    #restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
@@ -18,5 +18,9 @@ services:
     ports:
       - 5432:5432
     volumes: 
-      - ./pgdata:/var/lib/postgresql
+      - postgresql-volume:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+
+volumes:
+  postgresql-volume:
+    external: true 
