--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 log.log
-# certificates
-keys
 
-# docker volumes
-/docker/db/pgdata
+# certificates
+*.pem
