--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node ./index.js",
     "dev": " set NODE_ENV=development&&nodemon ./index.js -L"
   },
   "author": "Michelangelo De Francesco",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "color-json": "^2.0.1",
     "compression": "^1.7.4",
     "connect-pg-simple": "^6.1.0",
@@ -22,6 +23,8 @@
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "helmet": "^3.23.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
@@ -32,6 +35,7 @@
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
+    "uuid": "^8.2.0",
     "winston": "^3.2.1"
   }
 }
