--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "server API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js",
     "dev": " set NODE_ENV=development&&nodemon ./index.js -L"
   },
@@ -27,7 +26,9 @@
     "lodash": "^4.17.19",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
+    "nunjucks": "^3.2.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.2.1",
