--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Michelangelo De Francesco",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.12.3",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "color-json": "^2.0.1",
