--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 log.log
-
+/logs
 # certificates
 *.pem
 *.key
 *.crt
+
+# uploads
+/public/uploads
