--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.2",
@@ -31,9 +32,11 @@
     "passport-local": "^1.0.0",
     "pg": "^8.2.1",
     "sequelize": "^6.3.0",
+    "sharp": "^0.25.4",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "uuid": "^8.2.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.5.0"
   }
 }
