--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "env-cmd": "^10.1.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "express-rate-limit": "^5.1.3",
     "helmet": "^3.23.0",
     "jsonwebtoken": "^8.5.1",
