--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Michelangelo De Francesco",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^6.12.6",
+    "ajv": "^7.0.3",
+    "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "color-json": "^2.0.1",
     "compression": "^1.7.4",
@@ -23,22 +24,24 @@
     "express-fileupload": "^1.2.0",
     "express-rate-limit": "^5.2.3",
     "firebase-admin": "^9.4.2",
-    "helmet": "^4.2.0",
+    "helmet": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.16",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "nunjucks": "^3.2.2",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "sharp": "^0.27.0",
-    "swagger-jsdoc": "^5.0.1",
-    "swagger-ui-express": "^4.1.5",
-    "uuid": "^8.3.1",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   }
