--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^7.0.3",
+    "ajv-formats": "^1.5.1",
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "color-json": "^2.0.1",
