added dockerfile and goprod scripts

--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "server API",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./index.js",
-    "dev": " env-cmd -f .env.development nodemon ./index.js -L"
-  },
-  "author": "Michelangelo De Francesco",
-  "license": "ISC",
-  "dependencies": {
-    "ajv": "^7.0.3",
-    "ajv-formats": "^1.5.1",
-    "axios": "^0.21.1",
-    "chalk": "^4.1.0",
-    "color-json": "^2.0.1",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "env-cmd": "^10.1.0",
-    "errorhandler": "^1.5.1",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.0",
-    "express-rate-limit": "^5.2.3",
-    "firebase-admin": "^9.4.2",
-    "helmet": "^4.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.4.17",
-    "nodemon": "^2.0.6",
-    "nunjucks": "^3.2.2",
-    "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.5.1",
-    "sequelize": "^6.3.5",
-    "sharp": "^0.27.0",
-    "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^4.1.6",
-    "uuid": "^8.3.2",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "server API",
+	"main": "index.js",
+	"scripts": {
+		"dev": " env-cmd -f .env.development nodemon ./index.js -L",
+		"deployOnDocker": "env-cmd -f .env.production ./index.js",
+		"deployWithPM2": "env-cmd -f .env.production pm2 start ecosystem.config.js"
+	},
+	"author": "Michelangelo De Francesco",
+	"license": "ISC",
+	"dependencies": {
+		"ajv": "^7.0.3",
+		"ajv-formats": "^1.5.1",
+		"axios": "^0.21.1",
+		"chalk": "^4.1.0",
+		"color-json": "^2.0.1",
+		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"env-cmd": "^10.1.0",
+		"errorhandler": "^1.5.1",
+		"express": "^4.17.1",
+		"express-fileupload": "^1.2.0",
+		"express-rate-limit": "^5.2.3",
+		"firebase-admin": "^9.4.2",
+		"helmet": "^4.3.1",
+		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.20",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.2",
+		"nodemailer": "^6.4.17",
+		"nodemon": "^2.0.6",
+		"nunjucks": "^3.2.2",
+		"passport": "^0.4.1",
+		"passport-facebook": "^3.0.0",
+		"passport-google-oauth20": "^2.0.0",
+		"passport-local": "^1.0.0",
+		"pg": "^8.5.1",
+		"sequelize": "^6.3.5",
+		"sharp": "^0.27.0",
+		"swagger-jsdoc": "^6.0.0",
+		"swagger-ui-express": "^4.1.6",
+		"uuid": "^8.3.2",
+		"winston": "^3.3.3",
+		"winston-daily-rotate-file": "^4.5.0"
+	}
 }
