--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "env-cmd -f .env.development nodemon ./index.js -L",
 		"deployWithPM2": "env-cmd -f .env.production pm2 start ecosystem.config.js",
 		"deployWithNode": "env-cmd -f .env.production node ./index.js",
-		"deployOnDocker": "env-cmd -f .env.production ./index.js"
+		"deployOnDocker": "env-cmd -f .env.production ./index.js",
+		"start": "node ./index.js"
 	},
 	"author": "Michelangelo De Francesco",
 	"license": "ISC",
