--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"deployWithPM2": "env-cmd -f .env.production pm2 start ecosystem.config.js",
 		"deployWithNode": "env-cmd -f .env.production node ./index.js",
 		"deployOnDocker": "env-cmd -f .env.production ./index.js",
-		"start": "node ./index.js"
+		"web": "node ./index.js"
 	},
 	"author": "Michelangelo De Francesco",
 	"license": "ISC",
