--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "server API",
 	"main": "index.js",
 	"scripts": {
-		"dev": "env-cmd -f .env.development nodemon ./index.js -L",
+		"create-ts-config": "npx tsc --init",
+		"dev": "env-cmd -f .env.development nodemon --exec \"ts-node-dev\" ./index.ts",
 		"deployWithPM2": "env-cmd -f .env.production pm2 start ecosystem.config.js",
 		"deployWithNode": "env-cmd -f .env.production node ./index.js",
 		"deployOnDocker": "env-cmd -f .env.production ./index.js",
@@ -28,7 +29,6 @@
 		"env-cmd": "^10.1.0",
 		"errorhandler": "^1.5.1",
 		"express": "^4.17.1",
-		"express-fileupload": "^1.2.0",
 		"express-rate-limit": "^5.2.3",
 		"express-session": "^1.17.1",
 		"firebase-admin": "^9.4.2",
@@ -36,7 +36,6 @@
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
-		"multer": "^1.4.2",
 		"nodemailer": "^6.4.17",
 		"nodemon": "^2.0.6",
 		"nunjucks": "^3.2.2",
@@ -45,12 +44,37 @@
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
 		"pg": "^8.5.1",
-		"sequelize": "^6.3.5",
+		"reflect-metadata": "^0.1.13",
 		"sharp": "^0.27.0",
 		"swagger-jsdoc": "^6.0.0",
 		"swagger-ui-express": "^4.1.6",
+		"typeorm": "^0.2.30",
 		"uuid": "^8.3.2",
 		"winston": "^3.3.3",
 		"winston-daily-rotate-file": "^4.5.0"
+	},
+	"devDependencies": {
+		"@types/compression": "^1.7.0",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/cors": "^2.8.9",
+		"@types/errorhandler": "^1.5.0",
+		"@types/express": "^4.17.11",
+		"@types/express-fileupload": "^1.1.6",
+		"@types/express-rate-limit": "^5.1.1",
+		"@types/lodash": "^4.14.168",
+		"@types/morgan": "^1.9.2",
+		"@types/node": "^14.14.22",
+		"@types/passport": "^1.0.5",
+		"@types/passport-facebook": "^2.1.10",
+		"@types/passport-google-oauth20": "^2.0.6",
+		"@types/passport-local": "^1.0.33",
+		"@types/swagger-jsdoc": "^6.0.0",
+		"@types/swagger-ui-express": "^4.1.2",
+		"@types/uuid": "^8.3.0",
+		"@types/validator": "^13.1.3",
+		"express-fileupload": "^1.2.1",
+		"ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.1",
+		"typescript": "^4.1.3"
 	}
 }
