--- a/package.json
+++ b/package.json
@@ -61,13 +61,17 @@
 		"@types/express": "^4.17.11",
 		"@types/express-fileupload": "^1.1.6",
 		"@types/express-rate-limit": "^5.1.1",
+		"@types/jsonwebtoken": "^8.5.0",
 		"@types/lodash": "^4.14.168",
 		"@types/morgan": "^1.9.2",
 		"@types/node": "^14.14.22",
+		"@types/nodemailer": "^6.4.0",
+		"@types/nunjucks": "^3.1.4",
 		"@types/passport": "^1.0.5",
 		"@types/passport-facebook": "^2.1.10",
 		"@types/passport-google-oauth20": "^2.0.6",
 		"@types/passport-local": "^1.0.33",
+		"@types/sharp": "^0.27.1",
 		"@types/swagger-jsdoc": "^6.0.0",
 		"@types/swagger-ui-express": "^4.1.2",
 		"@types/uuid": "^8.3.0",
