added pagination. rollleed back packages

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"author": "Michelangelo De Francesco",
 	"license": "ISC",
 	"dependencies": {
-		"ajv": "^7.1.1",
+		"ajv": "^7.0.3",
 		"ajv-formats": "^1.5.1",
 		"axios": "^0.21.1",
 		"chalk": "^4.1.0",
@@ -29,26 +29,28 @@
 		"env-cmd": "^10.1.0",
 		"errorhandler": "^1.5.1",
 		"express": "^4.17.1",
-		"express-rate-limit": "^5.2.6",
+		"express-fileupload": "^1.2.0",
+		"express-rate-limit": "^5.2.3",
 		"express-session": "^1.17.1",
-		"firebase-admin": "^9.5.0",
-		"helmet": "^4.4.1",
+		"firebase-admin": "^9.4.2",
+		"helmet": "^4.3.1",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
-		"nodemailer": "^6.4.18",
-		"nodemon": "^2.0.7",
-		"nunjucks": "^3.2.3",
+		"multer": "^1.4.2",
+		"nodemailer": "^6.4.17",
+		"nodemon": "^2.0.6",
+		"nunjucks": "^3.2.2",
 		"passport": "^0.4.1",
 		"passport-facebook": "^3.0.0",
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
 		"pg": "^8.5.1",
-		"reflect-metadata": "^0.1.13",
-		"sharp": "^0.27.1",
-		"swagger-jsdoc": "^6.0.6",
-		"swagger-ui-express": "^4.1.6",
+		"sharp": "^0.27.0",
 		"typeorm": "^0.2.31",
+		"reflect-metadata": "^0.1.13",
+		"swagger-jsdoc": "^6.0.0",
+		"swagger-ui-express": "^4.1.6",
 		"uuid": "^8.3.2",
 		"winston": "^3.3.3",
 		"winston-daily-rotate-file": "^4.5.0"
