--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
 		"dev": "env-cmd -f .env.development nodemon --exec \"ts-node-dev\" ./index.ts",
 		"deployWithPM2": "env-cmd -f .env.production pm2 start ecosystem.config.js",
 		"deployWithNode": "env-cmd -f .env.production node ./index.js",
-		"deployOnDocker": "env-cmd -f .env.production ./index.js",
-		"start": "node ./index.js"
+		"deployOnDocker": "env-cmd -f .env.production ts-node ./build/index.js",
+		"start": "node ./index.js",
+		"build": "tsc",
+		"tsc": "tsc",
+		"prebuild": "node prebuild.js",
+		"postbuild": "node postbuild.js"
 	},
 	"engines": {
 		"node": "14.4"
@@ -46,11 +50,11 @@
 		"passport-google-oauth20": "^2.0.0",
 		"passport-local": "^1.0.0",
 		"pg": "^8.5.1",
-		"sharp": "^0.27.0",
-		"typeorm": "^0.2.31",
 		"reflect-metadata": "^0.1.13",
+		"sharp": "^0.27.0",
 		"swagger-jsdoc": "^6.0.0",
 		"swagger-ui-express": "^4.1.6",
+		"typeorm": "^0.2.31",
 		"uuid": "^8.3.2",
 		"winston": "^3.3.3",
 		"winston-daily-rotate-file": "^4.5.0"
@@ -79,6 +83,7 @@
 		"@types/uuid": "^8.3.0",
 		"@types/validator": "^13.1.3",
 		"express-fileupload": "^1.2.1",
+		"fs-extra": "^9.1.0",
 		"ts-node": "^9.1.1",
 		"ts-node-dev": "^1.1.1",
 		"typescript": "^4.1.5"
