added normal deploy with node

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"create-ts-config": "npx tsc --init",
 		"dev": "env-cmd -f .env.development nodemon --exec \"ts-node-dev\" ./index.ts",
 		"deployWithPM2": "env-cmd -f .env.production pm2 start ecosystem.config.js",
-		"deployWithNode": "env-cmd -f .env.production node ./index.js",
+		"deployWithNode": "env-cmd -f .env.production ts-node ./build/index.js",
 		"deployOnDocker": "env-cmd -f .env.production ts-node ./build/index.js",
-		"start": "node ./index.js",
+		"start": "ts-node ./index.js",
 		"build": "tsc",
 		"tsc": "tsc",
 		"prebuild": "node prebuild.js",
