--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
 		"typeorm": "^0.2.31",
 		"uuid": "^8.3.2",
 		"winston": "^3.3.3",
-		"winston-daily-rotate-file": "^4.5.0"
+		"winston-daily-rotate-file": "^4.5.0",
+		"ts-node": "^9.1.1"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
@@ -84,7 +85,6 @@
 		"@types/validator": "^13.1.3",
 		"express-fileupload": "^1.2.1",
 		"fs-extra": "^9.1.0",
-		"ts-node": "^9.1.1",
 		"ts-node-dev": "^1.1.1",
 		"typescript": "^4.1.5"
 	}
