--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
 		"uuid": "^8.3.2",
 		"winston": "^3.3.3",
 		"winston-daily-rotate-file": "^4.5.0",
-		"ts-node": "^9.1.1"
+		"ts-node": "^9.1.1",
+		"typescript": "^4.1.5"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
@@ -85,7 +86,6 @@
 		"@types/validator": "^13.1.3",
 		"express-fileupload": "^1.2.1",
 		"fs-extra": "^9.1.0",
-		"ts-node-dev": "^1.1.1",
-		"typescript": "^4.1.5"
+		"ts-node-dev": "^1.1.1"
 	}
 }
