--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
 		"sharp": "^0.27.0",
 		"swagger-jsdoc": "^6.0.0",
 		"swagger-ui-express": "^4.1.6",
+		"ts-node": "^9.1.1",
 		"typeorm": "^0.2.31",
+		"typescript": "^4.1.5",
 		"uuid": "^8.3.2",
 		"winston": "^3.3.3",
-		"winston-daily-rotate-file": "^4.5.0",
-		"ts-node": "^9.1.1",
-		"typescript": "^4.1.5"
+		"winston-daily-rotate-file": "^4.5.0"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
