--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
 		"ajv": "^7.0.3",
 		"ajv-formats": "^1.5.1",
 		"axios": "^0.21.1",
+		"bcrypt": "^5.0.0",
 		"chalk": "^4.1.0",
 		"color-json": "^2.0.1",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
-		"crypto": "^1.0.1",
 		"dotenv": "^8.2.0",
 		"env-cmd": "^10.1.0",
 		"errorhandler": "^1.5.1",
@@ -63,6 +63,7 @@
 		"winston-daily-rotate-file": "^4.5.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^3.0.0",
 		"@types/compression": "^1.7.0",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.10",
