--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,5 +12,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Login in the Docker Registry
+        run: echo ${{ secrets.PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
+        
+      - name: Pull the Docker image
+        run: docker pull ghcr.io/Mickahel/PERN-Docker-Boilerplate-Backend:latest
+
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag pern-boilerplate-backend:$(date +%s)
+        run: docker build -t ghcr.io/Mickahel/PERN-Docker-Boilerplate-Backend:$GITHUB_SHA --cache-from ghcr.io/Mickahel/PERN-Docker-Boilerplate-Backend:latest
+
+      - name: Push Docker image
+        run: docker push ghcr.io/Mickahel/PERN-Docker-Boilerplate-Backend:$GITHUB_SHA
+
