--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Login in the Docker Registry
         run: echo ${{ secrets.PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
-      - name: Pull the Docker image
-        run: docker pull ghcr.io/mickahel/pern-docker-boilerplate-backend:latest
+      #      - name: Pull the Docker image
+      #        run: docker pull ghcr.io/Mickahel/pern-docker-boilerplate-backend:latest
 
       - name: Build the Docker image
-        run: docker build -t ghcr.io/mickahel/pern-docker-boilerplate-backend:$GITHUB_SHA --cache-from ghcr.io/mickahel/pern-docker-boilerplate-backend:latest
+        run: docker build -t ghcr.io/Mickahel/pern-docker-boilerplate-backend:$GITHUB_SHA #--cache-from ghcr.io/mickahel/pern-docker-boilerplate-backend:latest
 
       - name: Push Docker image
-        run: docker push ghcr.io/mickahel/pern-docker-boilerplate-backend:$GITHUB_SHA
+        run: docker push ghcr.io/Mickahel/pern-docker-boilerplate-backend:$GITHUB_SHA
